--- a/core/404.html
+++ b/core/404.html
@@ -6,9 +6,9 @@ title: Not found
 description: We can't find what you are looking for.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/404.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,19 +31,21 @@ description: We can't find what you are looking for.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
+            <article class="_article">
+              <div class="_layout">
 {%- include 404.md title="Oops! Nothing found" %}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
