--- a/core/home.html
+++ b/core/home.html
@@ -6,9 +6,9 @@ title: Home
 description: Home template
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/home.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,30 +31,32 @@ description: Home template
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
-              <style>
-                .hero_block { padding:1rem 2rem }
-                .hero_block .hero-title { margin-top:1rem }
-                .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-                .hero_block .hero-hr { margin-top:45px }
-              </style>
-              <div class="hero_block box">
-                <h1 class="hero-title">💎 Main title</h1>
-                <p class="hero-description">Your site's description or sub-title.</p>
+            <article class="_article">
+              <div class="_layout">
+                <style>
+                  .hero_block { padding:1rem 2rem }
+                  .hero_block .hero-title { margin-top:1rem }
+                  .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                  .hero_block .hero-hr { margin-top:45px }
+                </style>
+                <div class="hero_block box">
+                  <h1 class="hero-title">💎 Main title</h1>
+                  <p class="hero-description">Your site's description or sub-title.</p>
+                </div>
+                <hr class="thin"/>
+                <p><code>// home content</code></p>
               </div>
-              <hr class="thin"/>
-              <p><code>// home content</code></p>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p><code>// site footer</code></p>
               <hr class="thin"/>
