--- a/core/index.html
+++ b/core/index.html
@@ -6,9 +6,9 @@ title: Core
 description: Minimal theme for your site.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/index.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,43 +31,45 @@ description: Minimal theme for your site.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
-              <style>
-                .hero_block { padding:1rem 2rem }
-                .hero_block .hero-title { margin-top:1rem }
-                .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-                .hero_block .hero-hr { margin-top:45px }
-              </style>
-              <div class="hero_block box">
-                <h1 class="hero-title">💎 Core</h1>
-                <p class="hero-description">Minimal theme for your site.</p>
+            <article class="_article">
+              <div class="_layout">
+                <style>
+                  .hero_block { padding:1rem 2rem }
+                  .hero_block .hero-title { margin-top:1rem }
+                  .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                  .hero_block .hero-hr { margin-top:45px }
+                </style>
+                <div class="hero_block box">
+                  <h1 class="hero-title">💎 Core</h1>
+                  <p class="hero-description">Minimal theme for your site.</p>
+                </div>
+                <hr class="thin"/>
+                <nav class="mv"><b><b>Core</b></b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                </nav>
+                <hr class="thin"/>
+                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/core/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404.html">404</a>
+                </nav>
+                <hr class="thin"/>
+                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
+                </nav>
               </div>
-              <hr class="thin"/>
-              <nav class="mv"><b><b>Core</b></b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
-              </nav>
-              <hr class="thin"/>
-              <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/md/404.html">404</a>
-              </nav>
-              <hr class="thin"/>
-              <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/test_code-blocks.html">Code blocks</a>
-              </nav>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
