--- a/core/legacy.html
+++ b/core/legacy.html
@@ -6,9 +6,9 @@ title: Legacy
 description: A theme development project.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/legacy.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,19 +31,21 @@ description: A theme development project.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
 {{ legacy | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
