--- a/core/page.html
+++ b/core/page.html
@@ -6,9 +6,9 @@ title: Page
 description: Page template.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/page.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,24 +31,26 @@ description: Page template.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><b>Page</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
-              <h1>Page title</h1>
-              <p><code>// page content</code></p>
-              <div class="mt-6"></div>
-              <hr>
-              <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">
+                <h1>Page title</h1>
+                <p><code>// page content</code></p>
+                <div class="mt-6"></div>
+                <hr/>
+                <h2>Other pages</h2>{%- capture pages %}{%- include pages.md %}{%- endcapture %}
 {{ pages | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p><code>// site footer</code></p>
               <hr class="thin"/>
