--- a/core/post.html
+++ b/core/post.html
@@ -6,9 +6,9 @@ title: Post
 description: Post template.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/post.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,24 +31,26 @@ description: Post template.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
-              <h1>Post title</h1>
-              <p><code>// post content</code></p>
-              <div class="mt-6"></div>
-              <hr>
-              <h2>Other posts</h2>{%- capture posts %}{%- include posts.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">
+                <h1>Post title</h1>
+                <p><code>// post content</code></p>
+                <div class="mt-6"></div>
+                <hr/>
+                <h2>Other posts</h2>{%- capture posts %}{%- include posts.md %}{%- endcapture %}
 {{ posts | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p><code>// site footer</code></p>
               <hr class="thin"/>
