--- a/core/test_code-blocks.html
+++ b/core/test_code-blocks.html
@@ -6,9 +6,9 @@ title: Test Code Blocks
 description: A theme development project.
 ---
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US">
+<html class="_core_layout no_js" lang="en-US">
 <!-- path   : core/test_code-blocks.html -->
-<!-- layout : dove/_source/_layouts/core -->
+<!-- layout : _source/_layouts/core -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,25 +31,27 @@ description: A theme development project.
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960">
+            <div class="_layout">
               <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
               </p>
               <hr class="thin"/>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layout _960">
-              <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
-                    <svg viewBox="0 0 24 24">
-                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
-              </nav>
-              <hr class="thin"/>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">
+                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/core/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><b>Code blocks</b>
+                </nav>
+                <hr class="thin"/>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
 {{ code-blocks | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layout _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
