--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: Dove
 description: A theme development project.
 ---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US">
+<html class="_prime_layout no_js" lang="en-US">
 <!-- path   : index.html -->
-<!-- layout : dove/_source/_layouts/prime -->
+<!-- layout : _source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -31,89 +31,83 @@ description: A theme development project.
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layout _1200">
-          <div class="container-lg px-3 my-5 markdown-body">
-            <header class="_header">
-              <div class="_layout">
-                <h1>🕊️ The Dove Project</h1>
-              </div>
-            </header>
-            <nav class="_nav">
-              <div class="_layout">{%- capture nav %}{%- include dove/nav.md %}{%- endcapture %}
+        <div class="_layout container-lg px-3 my-5 markdown-body">
+          <header class="_header">
+            <div class="_layout">
+              <h1>🕊️ The Dove Project</h1>
+            </div>
+          </header>
+          <nav class="_nav">
+            <div class="_layout">{%- capture nav %}{%- include nav.md %}{%- endcapture %}
 {{ nav | markdownify }}
-              </div>
-            </nav>
-            <main class="_main">
-              <article class="_article">
-                <div class="_layout">
-                  <div class="flex" style="gap:3rem">
-                    <div class="fill" id="themes_">
-                      <h3 class="mt-0">Themes</h3>
-                      <p class="text-grey">We are working on the following themes.</p>
-                      <nav>
-                        <ul class="rapat">
-                          <li><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
-                          </li>
-                          <li><a href="/dove/mallet/"><b>Mallet</b></a><i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
-                          </li>
-                          <li><a href="/dove/nova/"><b>Nova</b></a><i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
-                          </li>
-                          <li><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
-                          </li>
-                        </ul>
-                      </nav>
-                    </div>
-                  </div>
-                  <hr class="thin"/>{%- if site.github.environment == 'development' -%}
-                  <nav>{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}
-{{ nav_test | markdownify }}
-                  </nav>
-                  <hr class="thin"/>{%- endif %}
-                  <p class="text-grey">These are supporting posts and pages for the project.</p>{%- capture pages %}{% include pages.md exclude="" %}{%- endcapture %}{%- capture posts %}{% include posts.md exclude="" %}{%- endcapture %}
-                  <div class="flex" style="gap:3rem">
-                    <div id="pages_" style="min-width:250px">
-                      <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
-                      <ul>
-                        <li><a href="404">404</a>
+            </div>
+          </nav>
+          <main class="_main">
+            <article class="_article">
+              <div class="_layout">
+                <div class="flex" style="gap:3rem">
+                  <div class="fill" id="themes_">
+                    <h3 class="mt-0">Themes</h3>
+                    <p class="text-grey">We are working on the following themes.</p>
+                    <nav>
+                      <ul class="rapat">
+                        <li><a href="/dove/core/"><b>Core</b></a><i class="_icon"><i class="isvg">
+                              <svg viewBox="0 0 24 24">
+                                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                              </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                        </li>
+                        <li><a href="/dove/mallet/"><b>Mallet</b></a><i class="_icon"><i class="isvg">
+                              <svg viewBox="0 0 24 24">
+                                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                              </svg></i></i><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+                        </li>
+                        <li><a href="/dove/nova/"><b>Nova</b></a><i class="_icon"><i class="isvg">
+                              <svg viewBox="0 0 24 24">
+                                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                              </svg></i></i><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
+                        </li>
+                        <li><a href="/dove/prime/"><b>Prime</b></a><i class="_icon"><i class="isvg">
+                              <svg viewBox="0 0 24 24">
+                                <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                              </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
                         </li>
                       </ul>
-                    </div>
-                    <div id="posts_" style="min-width:250px">
-                      <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
-                    </div>
+                    </nav>
                   </div>
-                  <hr class="thin"/>
-                  <h3>Configurations</h3>{%- capture config %}{%- include_relative _config.md %}{%- endcapture %}
-{{ config | markdownify }}
                 </div>
-              </article>
-            </main>
-            <footer class="_footer footer">
-              <div class="_layout">{%- capture footer %}{%- include dove/footer.md %}{%- endcapture %}
-{{ footer | markdownify }}
+                <hr class="thin"/>{%- if site.github.environment == 'development' -%}
+                <nav>{%- capture nav_test %}{%- include dove/nav_test.md %}{%- endcapture %}
+{{ nav_test | markdownify }}
+                </nav>
+                <hr class="thin"/>{%- endif %}
+                <p class="text-grey">These are supporting posts and pages for the project.</p>{%- capture pages %}{% include pages.md exclude="" %}{%- endcapture %}{%- capture posts %}{% include posts.md exclude="" %}{%- endcapture %}
+                <div class="flex" style="gap:3rem">
+                  <div id="pages_" style="min-width:250px">
+                    <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
+                    <ul>
+                      <li><a href="404">404</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <div id="posts_" style="min-width:250px">
+                    <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
+                  </div>
+                </div>
                 <hr class="thin"/>
-                <p class="text-right text-gray"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/index.html.pug">Improve this page</a>.</small></p>
+                <h3>Configurations</h3>{%- capture config %}{%- include_relative _config.md %}{%- endcapture %}
+{{ config | markdownify }}
               </div>
-            </footer>
-          </div>
+            </article>
+          </main>
+          <footer class="_footer">
+            <div class="_layout">{%- capture footer %}{%- include footer.md %}{%- endcapture %}
+{{ footer | markdownify }}
+            </div>
+          </footer>
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
 {% include theme_switch.html %}
         </div>
       </div>
