--- a/mallet/legacy.html
+++ b/mallet/legacy.html
@@ -6,9 +6,9 @@ description: A theme development project.
 index: false
 ---
 <!DOCTYPE html>
-<html class="_mallet_layout" lang="en-US">
+<html class="_mallet_layout no_js" lang="en-US">
 <!-- path   : mallet/legacy.html -->
-<!-- layout : dove/_source/_layouts/mallet -->
+<!-- layout : _source/_layouts/mallet -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -24,29 +24,39 @@ index: false
   <body>
     <div class="_views">
       <div class="_view _app __fadein">
-        <div class="_view_layout container-lg px-3 markdown-body">
-          <header class="header">
-            <div class="_logo"><a href="/dove/">Dove</a></div>
+        <div class="_layout container-lg px-3 my-5 markdown-body">
+          <header class="_header">
+            <div class="_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}
+{{ header | markdownify }}
+            </div>
           </header>
           <nav class="_nav">
-            <div><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+            <div class="_layout">
+              <div><a href="/dove/mallet/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/404.html">404</a>
+              </div>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
 {{ legacy | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <hr class="thin"/>
-            <p class="text-right text-grey"><small>
-                This site is open source.
-                <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/legacy.html.pug">Improve this page</a>.</small></p>
+            <div class="_layout">
+              <hr class="thin"/>
+              <p class="text-right text-grey"><small>
+                  This site is open source.
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/mallet/legacy.html.pug">Improve this page</a>.</small></p>
+            </div>
           </footer>
         </div>
       </div>
       <div class="_view">
+        <div class="_layout">
 {% include theme_switch.html %}
+        </div>
       </div>
 {% include layout_body.html %}
     </div>
