--- a/nova/legacy.html
+++ b/nova/legacy.html
@@ -6,9 +6,9 @@ description: A theme development project.
 index: false
 ---
 <!DOCTYPE html>
-<html class="_nova_layout" lang="en-US">
+<html class="_nova_layout no_js" lang="en-US">
 <!-- path   : nova/legacy.html -->
-<!-- layout : dove/_source/_layouts/nova -->
+<!-- layout : _source/_layouts/nova -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -24,25 +24,27 @@ index: false
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layoutx">
+        <div class="_layout">
           <header class="_header">
-            <div class="_layoutx">
-              <div class="_logo"><a href="/dove/">Dove</a></div>
+            <div class="_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}
+{{ header | markdownify }}
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layoutx _960">
+            <div class="_layout">
               <p><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
               </p>
             </div>
           </nav>
           <main class="_main">
-            <article class="_article _layoutx _960">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
+            <article class="_article">
+              <div class="_layout">{%- capture legacy %}{%- include preview-legacy.md %}{%- endcapture %}
 {{ legacy | markdownify }}
+              </div>
             </article>
           </main>
           <footer class="_footer">
-            <div class="_layoutx _960">
+            <div class="_layout">
               <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
@@ -52,7 +54,7 @@ index: false
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
 {% include theme_switch.html %}
         </div>
       </div>
