--- a/prime/404.html
+++ b/prime/404.html
@@ -6,9 +6,9 @@ title: Not found
 description: We can't find what you are looking for.
 ---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US">
+<html class="_prime_layout no_js" lang="en-US">
 <!-- path   : prime/404.html -->
-<!-- layout : dove/_source/_layouts/prime -->
+<!-- layout : _source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -24,40 +24,41 @@ description: We can't find what you are looking for.
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layout _1200">
-          <div class="container-lg px-3 my-5 markdown-body">
-            <header class="_header">
-              <div class="_layout">
-                <h1>{% include dove/logo.html name="prime" %}</h1>
+        <div class="_layout container-lg px-3 my-5 markdown-body">
+          <header class="_header">
+            <div class="_layout">
+              <h1>{% include dove/logo.html name="prime" %}</h1>
+            </div>
+          </header>
+          <nav class="_nav">
+            <div class="_layout">
+              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
               </div>
-            </header>
-            <nav class="_nav">
+              <hr class="thin"/>
+            </div>
+          </nav>
+          <main class="_main">
+            <article class="_article">
               <div class="_layout">
-                <p><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><b>404</b>
-                </p>
-                <hr class="thin"/>
-              </div>
-            </nav>
-            <main class="_main">
-              <article class="_article">
-                <div class="_layout">
 {%- include 404.md title="Oops! Nothing found" %}
-                </div>
-              </article>
-            </main>
-            <footer class="_footer footer">
-              <div class="_layout">
-                <hr class="thin"/>
-                <p class="text-right text-grey"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/404.html.pug">Improve this page</a>.</small></p>
               </div>
-            </footer>
-          </div>
+            </article>
+          </main>
+          <footer class="_footer">
+            <div class="_layout">
+              <hr class="thin"/>
+              <p class="text-right text-grey"><small>
+                  This site is open source.
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/404.html.pug">Improve this page</a>.</small></p>
+            </div>
+          </footer>
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
 {% include theme_switch.html %}
         </div>
       </div>
