--- a/prime/home.html
+++ b/prime/home.html
@@ -6,9 +6,9 @@ title: Home
 description: Home template
 ---
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US">
+<html class="_prime_layout no_js" lang="en-US">
 <!-- path   : prime/home.html -->
-<!-- layout : dove/_source/_layouts/prime -->
+<!-- layout : _source/_layouts/prime -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -24,53 +24,54 @@ description: Home template
   <body>
     <div class="_views">
       <div class="_view">
-        <div class="_layout _1200">
-          <div class="container-lg px-3 my-5 markdown-body">
-            <header class="_header">
-              <div class="_layout">
-                <h1>{% include dove/logo.html name="prime" %}</h1>
+        <div class="_layout container-lg px-3 my-5 markdown-body">
+          <header class="_header">
+            <div class="_layout">
+              <h1>{% include dove/logo.html name="prime" %}</h1>
+            </div>
+          </header>
+          <nav class="_nav">
+            <div class="_layout">
+              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
               </div>
-            </header>
-            <nav class="_nav">
+              <hr class="thin"/>
+            </div>
+          </nav>
+          <main class="_main">
+            <article class="_article">
               <div class="_layout">
-                <p><a href="/dove/prime/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/prime/404.html">404</a>
-                </p>
-                <hr class="thin"/>
-              </div>
-            </nav>
-            <main class="_main">
-              <article class="_article">
-                <div class="_layout">
-                  <style>
-                    .hero_block { padding:1rem 2rem }
-                    .hero_block .hero-title { margin-top:1rem }
-                    .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
-                    .hero_block .hero-hr { margin-top:45px }
-                  </style>
-                  <div class="hero_block box">
-                    <h1 class="hero-title">🦅 Heroic title</h1>
-                    <p class="hero-description">Your site's description or sub-title.</p>
-                  </div>
-                  <hr class="thin"/>
-                  <p><code>// home content</code></p>
+                <style>
+                  .hero_block { padding:1rem 2rem }
+                  .hero_block .hero-title { margin-top:1rem }
+                  .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                  .hero_block .hero-hr { margin-top:45px }
+                </style>
+                <div class="hero_block box">
+                  <h1 class="hero-title">🦅 Heroic title</h1>
+                  <p class="hero-description">Your site's description or sub-title.</p>
                 </div>
-              </article>
-            </main>
-            <footer class="_footer footer">
-              <div class="_layout">
                 <hr class="thin"/>
-                <p><code>// site footer</code></p>
-                <hr class="thin"/>
-                <p class="text-right text-grey"><small>
-                    This site is open source.
-                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/home.html.pug">Improve this page</a>.</small></p>
+                <p><code>// home content</code></p>
               </div>
-            </footer>
-          </div>
+            </article>
+          </main>
+          <footer class="_footer">
+            <div class="_layout">
+              <hr class="thin"/>
+              <p><code>// site footer</code></p>
+              <hr class="thin"/>
+              <p class="text-right text-grey"><small>
+                  This site is open source.
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/home.html.pug">Improve this page</a>.</small></p>
+            </div>
+          </footer>
         </div>
       </div>
       <div class="_view">
-        <div class="_layout _1200">
+        <div class="_layout">
 {% include theme_switch.html %}
         </div>
       </div>
