--- a/nova/test_code-blocks.html
+++ b/nova/test_code-blocks.html
@@ -2,13 +2,13 @@
 index: false
 layout: html
 use_pug: true
-title: Post
-description: Post template.
+title: Test Code Blocks
+description: A theme development project.
 ---
 <!DOCTYPE html>
-<html class="_core_layout no_js" lang="en-US">
-<!-- path   : core/post.html -->
-<!-- layout : _source/_layouts/core -->
+<html class="_nova_layout no_js" lang="en-US">
+<!-- path   : nova/test_code-blocks.html -->
+<!-- layout : _source/_layouts/nova -->
   <head>
     <meta charset="utf-8"/>
 {% seo %}
@@ -17,7 +17,7 @@ description: Post template.
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
     <style>.isvg svg { width:1em;height:1em }</style>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/core/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/nova/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
 {% include layout_head.html %}
 <!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
@@ -27,7 +27,7 @@ description: Post template.
         <div class="_layout">
           <header class="_header">
             <div class="_layout">
-              <h1>{% include dove/logo.html name="core" %}</h1>
+              <h1>{% include dove/logo.html name="nova" %}</h1>
             </div>
           </header>
           <nav class="_nav">
@@ -35,7 +35,7 @@ description: Post template.
               <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><b>Post</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+                    </svg></i></i><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
               </div>
               <hr class="thin"/>
             </div>
@@ -43,23 +43,22 @@ description: Post template.
           <main class="_main">
             <article class="_article">
               <div class="_layout">
-                <h1>Post title</h1>
-                <p><code>// post content</code></p>
-                <div class="mt-6"></div>
-                <hr/>
-                <h2>Other posts</h2>{%- capture posts %}{%- include posts.md %}{%- endcapture %}
-{{ posts | markdownify }}
+                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/undefined/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/undefined/test_code-blocks.html">Code blocks</a>
+                </nav>
+                <hr class="thin"/>{%- capture code-blocks %}{%- include test_code-blocks.md %}{%- endcapture %}
+{{ code-blocks | markdownify }}
               </div>
             </article>
           </main>
           <footer class="_footer">
             <div class="_layout">
               <hr class="thin"/>
-              <p><code>// site footer</code></p>
-              <hr class="thin"/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/post.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/nova/test_code-blocks.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
