--- a/core/home.html
+++ b/core/home.html
@@ -32,8 +32,11 @@ description: Home template
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <p><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
-              </p>
+              <div class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i><a href="/dove/core/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><b>Home</b><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/core/404.html">404</a>
+              </div>
               <hr class="thin"/>
             </div>
           </nav>
@@ -48,7 +51,7 @@ description: Home template
                 </style>
                 <div class="hero_block box">
                   <h1 class="hero-title">💎 Main title</h1>
-                  <p class="hero-description">Your site's description or sub-title.</p>
+                  <p class="hero-description">Your site's description.</p>
                 </div>
                 <hr class="thin"/>
                 <p><code>// home content</code></p>
