--- a/nova/index.html
+++ b/nova/index.html
@@ -1,9 +1,9 @@
 ---
+index: false
 layout: html
 use_pug: true
-title: Home
-description: A theme development project.
-index: false
+title: Nova
+description: New theme for your site.
 ---
 <!DOCTYPE html>
 <html class="_nova_layout no_js" lang="en-US">
@@ -26,55 +26,45 @@ index: false
       <div class="_view">
         <div class="_layout">
           <header class="_header">
-            <div class="_layout">{%- capture header %}{%- include header.md %}{%- endcapture %}
-{{ header | markdownify }}
+            <div class="_layout">
+              <h1>{% include dove/logo.html %}</h1>
             </div>
           </header>
           <nav class="_nav">
             <div class="_layout">
-              <p><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
-              </p>
             </div>
           </nav>
           <main class="_main">
             <article class="_article">
               <div class="_layout">
                 <style>
-                  .hero-box-2 {
-                    margin:.5rem 0;
-                    padding: 1px 2rem 3rem;
-                    background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
-                    color: #fff;
-                  }
-                  .hero-box-2 hr { border-color: #cdb8e3 }
-                  .hero-box-2 .site-description {
-                    margin-left:5.3rem;
-                    font-weight: 300;
-                    font-size: 1.1em;
-                    color: #000;
-                  }
-                  ._dark .hero-box-2 .site-description { color: #fff }
+                  .hero_block { padding:1rem 2rem }
+                  .hero_block .hero-title { margin-top:1rem }
+                  .hero_block .hero-description { margin-left: 3.3rem; font-size: 1.1em; }
+                  .hero_block .hero-hr { margin-top:45px }
                 </style>
-                <div class="hero-box-2 box">
-                  <h1 id="_hero-title">⚒️ Heroic Title</h1>
-                  <p class="site-description">Your site's description or mission statement.</p>
+                <div class="hero_block box">
+                  <h1 class="hero-title">🌌 Nova</h1>
+                  <p class="hero-description">New theme for your site.</p>
                 </div>
-                <hr/>
-                <style>
-                  .hero-box-1 { padding:0 }
-                  .hero-box-1 .site-description {
-                    margin-left:5.3rem;
-                    font-weight: 300;
-                    font-size: 1.1em;
-                  }
-                  .hero-box-1 .hero-hr { margin-top:45px }
-                </style>
-                <div class="hero-box-1 box">
-                  <h1 id="_hero-title">⚒️ Heroic Title</h1>
-                  <p class="site-description">Your site's description or mission statement.</p>
-                  <hr class="hero-hr"/>
-                </div>
-                <p><code>// content for : Home</code></p>
+                <hr class="thin"/>
+                <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/nova/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/404.html">404</a>
+                </nav>
+                <hr class="thin"/>
+                <nav class="mv"><b>Markdown</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/nova/md/preview.html">Preview</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/home.html">Home</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/page.html">Page</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/post.html">Post</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/md/404.html">404</a>
+                </nav>
+                <hr class="thin"/>
+                <nav class="mv"><b>Test</b><i class="_icon"><i class="isvg">
+                      <svg viewBox="0 0 24 24">
+                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                      </svg></i></i><a href="/dove/nova/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/nova/test_code-blocks.html">Code blocks</a>
+                </nav>
               </div>
             </article>
           </main>
