--- a/core/index.html
+++ b/core/index.html
@@ -32,6 +32,7 @@ description: Minimal theme for your site.
           </header>
           <nav class="_nav">
             <div class="_layout">
+              <style>._nav{display:none !important}</style>
             </div>
           </nav>
           <main class="_main">
