--- a/mallet/home.html
+++ b/mallet/home.html
@@ -24,7 +24,7 @@ description: Home template
   <body>
     <div class="_views">
       <div class="_view _app __fadein">
-        <div class="_layout container-lg px-3 my-5 markdown-body">
+        <div class="_layout container-lg markdown-body">
           <header class="_header">
             <div class="_layout">
               <h1>{% include dove/logo.html name="mallet" %}</h1>
@@ -50,7 +50,7 @@ description: Home template
                   .hero_block .hero-hr { margin-top:45px }
                 </style>
                 <div class="hero_block box">
-                  <h1 class="hero-title">⚒️ Smooth title</h1>
+                  <h1 class="hero-title">⚒️ Site title</h1>
                   <p class="hero-description">Your site's description.</p>
                 </div>
                 <hr class="thin"/>
