--- a/mallet/index.html
+++ b/mallet/index.html
@@ -24,7 +24,7 @@ description: Smooth theme for your site.
   <body>
     <div class="_views">
       <div class="_view _app __fadein">
-        <div class="_layout container-lg px-3 my-5 markdown-body">
+        <div class="_layout container-lg markdown-body">
           <header class="_header">
             <div class="_layout">
               <h1>{% include dove/logo.html %}</h1>
@@ -32,6 +32,7 @@ description: Smooth theme for your site.
           </header>
           <nav class="_nav">
             <div class="_layout">
+              <style>._nav{display:none !important}</style>
             </div>
           </nav>
           <main class="_main">
