--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -24,7 +24,7 @@ description: Theme preview.
   <body>
     <div class="_views">
       <div class="_view _app __fadein">
-        <div class="_layout container-lg px-3 my-5 markdown-body">
+        <div class="_layout container-lg markdown-body">
           <header class="_header">
             <div class="_layout">
               <h1>{% include dove/logo.html name="mallet" %}</h1>
