--- a/mallet/index.html
+++ b/mallet/index.html
@@ -3,7 +3,7 @@ index: false
 layout: html
 use_pug: true
 title: Mallet
-description: Smooth theme for your site.
+description: Mallet is a Jekyll theme for GitHub Pages.
 ---
 <!DOCTYPE html>
 <html class="_mallet_layout no_js" lang="en-US">
@@ -45,8 +45,8 @@ description: Smooth theme for your site.
                   .hero_block .hero-hr { margin-top:45px }
                 </style>
                 <div class="hero_block box">
-                  <h1 class="hero-title">⚒️ Mallet</h1>
-                  <p class="hero-description">Smooth theme for your site.</p>
+                  <h1 class="hero-title">⚒️ Techie Joe's Mallet</h1>
+                  <p class="hero-description">Mallet is a Jekyll theme for GitHub Pages.</p>
                 </div>
                 <hr class="thin"/>
                 <nav class="mv"><b>Html</b><i class="_icon"><i class="isvg">
@@ -65,6 +65,9 @@ description: Smooth theme for your site.
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i><a href="/dove/mallet/test_colors.html">Colors</a><i class="_icon"><i class="itext">&bull;</i></i><a href="/dove/mallet/test_code-blocks.html">Code blocks</a>
+                </nav>
+                <hr class="thin"/>
+                <nav class="mv"><a href="about.html">About  </a>
                 </nav>
               </div>
             </article>
